# riddle-game-fullstack

./: CMakeLists.txt  ClientHandler_8cpp.html  ClientHandler_8h.html  ClientHandler_8h__dep__incl.dot  ClientHandler_8h_source.html  ClientNetworkHandler_8cpp.html  ClientNetworkHandler_8cpp__incl.dot  ClientNetworkHandler_8h.html  ClientNetworkHandler_8h__dep__incl.dot  ClientNetworkHandler_8h_source.html  Doxyfile  GameManager_8cpp__incl.dot  GameManager_8cpp_source.html  GameManager_8h__dep__incl.dot  GameManager_8h__incl.dot  LICENSE  MainClient_8cpp.html  MainClient_8h__dep__incl.dot  MainClient_8h__incl.dot  MainClient_8h_source.html  MainServer_8cpp__incl.dot  MainServer_8cpp_source.html  MainServer_8h__incl.dot  MainServer_8h_source.html  README.md  Riddle_8cpp.html  Riddle_8cpp__incl.dot  Riddle_8cpp_source.html  Riddle_8h.html  Riddle_8h__dep__incl.dot  Riddle_8h__incl.dot  Riddle_8h_source.html  ServerNetworkHandler_8h.html  ServerNetworkHandler_8h__dep__incl.dot  UserInterface_8h__dep__incl.dot  UserInterface_8h_source.html  annotated.html  annotated_dup.js  classClientHandler.js  classClientHandler__coll__graph.dot  (+38 more)
client/: CMakeLists.txt  main.cpp
client/include/: ClientNetworkHandler.h  MainClient.h  Parser.h  UserInterface.h
client/src/: ClientNetworkHandler.cpp  MainClient.cpp  Parser.cpp
server/: CMakeLists.txt  main.cpp
server/include/: ClientHandler.h  GameManager.h  MainServer.h  Parser.h  Riddle.h  ServerNetworkHandler.h
server/riddles/: README  riddle1.rdl  riddle2.rdl  riddle3.rdl
server/src/: ClientHandler.cpp  GameManager.cpp  (+3 more)
(+110 files in other folders)
